[package]
name = "tomorrow-api"
version = "0.1.0"
authors = ["Valentin Fries <contact@fries.io>", "Vincent Milano <vincent_mot@hotmail.fr>"]

[dependencies]
tomorrow-core = {git = "https://github.com/tomorrow-paper/tomorrow-core"}
tomorrow-http = {git = "https://github.com/tomorrow-paper/tomorrow-http"}
tomorrow-recuperator = {git = "https://github.com/tomorrow-paper/tomorrow-recuperator"}
recuperator-google-maps = {git = "https://github.com/tomorrow-paper/recuperator-google-maps"}

rocket = "0.3.3"
rocket_codegen = "0.3.3"
rocket_contrib = "0.3.3"

serde = "1.0.15"
serde_json = "1.0.4"
serde_derive = "1.0.15"